--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div style="text-align: center; margin: 20px;">
+  <button onclick="filterProducts('all')">All</button>
+  <button onclick="filterProducts('tshirt')">T-Shirts</button>
+  <button onclick="filterProducts('hoodie')">Hoodies</button>
+  <button onclick="filterProducts('jeans')">Jeans</button>
+</div>
+
   <!-- Swiper CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
 
